feat(mdorim): melhoria na estrutura, testes, build e CI

--- a/packages/mdorim/jest.config.json
+++ b/packages/mdorim/jest.config.json
@@ -1,8 +1,4 @@
 {
     "roots": ["."],
-    "modulePathIgnorePatterns": [
-        "<rootDir>/dist/",
-        "<rootDir>/node_modules/",
-        "<rootDir>/src/samples/"
-    ]
+    "modulePathIgnorePatterns": ["<rootDir>/node_modules/", "<rootDir>/src/"]
 }
