--- a/packages/mdorim/package.json
+++ b/packages/mdorim/package.json
@@ -1,6 +1,7 @@
 {
     "name": "@elucidario/pkg-mdorim",
     "version": "0.1.0",
+    "description": "Modelo de Dados para Organização e Representação da Informação Museológica, utilizado pelo Elucidário.art.",
     "homepage": "https://elucidario.art/mdorim",
     "license": "MIT",
     "author": {
@@ -8,10 +9,12 @@
         "email": "ola@hgod.in"
     },
     "type": "module",
+    "types": "lib/types.js",
+    "main": "lib//mjs/index.mjs",
     "exports": {
         ".": {
-            "import": "./static/mdorim/index.mjs",
-            "require": "./static/mdorim/index.cjs"
+            "import": "./lib/mjs/index.mjs",
+            "require": "./lib/cjs/index.cjs"
         }
     },
     "files": [
@@ -22,16 +25,12 @@
         "translations"
     ],
     "scripts": {
-        "build": "pnpm clean:docs && pnpm clean:dist && pnpm clean:static && node src/build.js",
-        "clean:dist": "rm -rf dist/*",
+        "buildScript": "node src/build/build.js",
+        "build": "pnpm buildScript -c -s -e -t -m && pnpm test",
         "clean:docs": "rm -rf docs/*",
         "clean:static": "rm -rf static/*",
-        "dev": "pnpm build -s -e -w --test",
+        "dev": "pnpm buildScript -c -s -e -t -m --test",
         "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose"
-    },
-    "dependencies": {
-        "json-schema-to-typescript": "^13.0.1",
-        "lodash-es": "^4.17.21"
     },
     "devDependencies": {
         "@babel/plugin-transform-json-strings": "^7.22.5",
@@ -44,6 +43,11 @@
         "child_process": "^1.0.2",
         "commander": "^10.0.1",
         "jest": "^29.5.0",
-        "jest-json-schema": "^6.1.0"
+        "jest-json-schema": "^6.1.0",
+        "json-schema-to-typescript": "^13.0.1",
+        "lodash-es": "^4.17.21"
+    },
+    "dependencies": {
+        "ajv": "6"
     }
 }
