--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -16,7 +16,10 @@
         "watch:styles": "pnpm build:styles --watch"
     },
     "dependencies": {
-        "@elucidario/pkg-mdorim": "workspace:^"
+        "@elucidario/pkg-mdorim": "workspace:^",
+        "@radix-ui/react-icons": "^1.3.0",
+        "@radix-ui/react-popover": "^1.0.6",
+        "react-hook-form": "^7.45.1"
     },
     "devDependencies": {
         "@babel/preset-env": "^7.22.5",
