--- a/packages/design-system/tsconfig.json
+++ b/packages/design-system/tsconfig.json
@@ -1,12 +1,13 @@
 {
     "extends": "@elucidario/pkg-tsconfig",
     "compilerOptions": {
+        "target": "es2017",
         "resolveJsonModule": true,
         "outDir": "dist",
         "jsx": "react",
         "baseUrl": ".",
         "moduleResolution": "node",
-        "module": "ES2015",
+        "module": "esnext",
         "declaration": true,
         "declarationMap": true,
         "preserveSymlinks": true,
