chore(workspaces): workspace files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,7 @@
         "Athanasios",
         "Auguste",
         "autodocs",
+        "AUTOINCREMENT",
         "autoload",
         "automattic",
         "Baciccio",
@@ -122,6 +123,7 @@
         "Segall",
         "semantica",
         "sistematizacion",
+        "somewordpress",
         "Sotheby’s",
         "sparql",
         "sporny",
@@ -135,6 +137,7 @@
         "timespan",
         "titulos",
         "Uncategorized",
+        "varchar",
         "vega",
         "Velios",
         "vipwpcs",
@@ -142,6 +145,7 @@
         "WALDROP",
         "wpcs",
         "wpdb",
+        "wptests",
         "Yoast",
         "Zoglauer"
     ],
