--- a/packages/core/composer.json
+++ b/packages/core/composer.json
@@ -42,5 +42,8 @@
             "composer/installers": true,
             "pestphp/pest-plugin": true
         }
+    },
+    "require": {
+        "opis/json-schema": "^2.3"
     }
 }
