chore(workspace): workspace files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,6 +52,7 @@
         "dealerdirect",
         "debugado",
         "declaracao",
+        "decycle",
         "Delmas",
         "derviche",
         "desacessão",
@@ -109,14 +110,17 @@
         "museologica",
         "nivel",
         "ODDY",
+        "opis",
         "Ottoni",
         "paradigmaticas",
         "peaceiris",
+        "pestphp",
         "phpcodesniffer",
         "phpcompatibility",
         "phpunit",
         "principios",
         "profesionales",
+        "retrocycle",
         "sanderson",
         "Sanderson",
         "saracevic",
@@ -149,7 +153,6 @@
         "Yoast",
         "Zoglauer"
     ],
-    "eslint.packageManager": "pnpm",
     "npm.packageManager": "pnpm",
     "prettier.tabWidth": 4,
     "eslint.format.enable": true
