--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -1,57 +1,60 @@
 {
-  "name": "@elucidario/pkg-design-system",
-  "version": "0.2.0",
-  "description": "",
-  "keywords": [],
-  "license": "ISC",
-  "author": "",
-  "type": "module",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
-    "build": "rollup -c",
-    "build:styles": "tailwindcss -i ./src/input.css -o ./dist/output.css",
-    "watch:styles": "pnpm build:styles --watch"
-  },
-  "dependencies": {
-    "@elucidario/pkg-mdorim": "workspace:^",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-popover": "^1.0.6",
-    "react-hook-form": "^7.45.1"
-  },
-  "devDependencies": {
-    "@babel/preset-env": "^7.22.5",
-    "@babel/preset-react": "^7.22.5",
-    "@babel/preset-typescript": "^7.22.5",
-    "@elucidario/pkg-rollup": "workspace:^",
-    "@elucidario/pkg-tsconfig": "workspace:^",
-    "@elucidario/pkg-types": "workspace:^",
-    "@rollup/plugin-babel": "^6.0.3",
-    "@rollup/plugin-node-resolve": "^15.1.0",
-    "@rollup/plugin-replace": "^5.0.2",
-    "@storybook/addon-essentials": "7.0.25",
-    "@storybook/addon-interactions": "7.0.25",
-    "@storybook/addon-links": "7.0.25",
-    "@storybook/addon-styling": "^1.3.2",
-    "@storybook/blocks": "7.0.25",
-    "@storybook/react": "7.0.25",
-    "@storybook/react-vite": "7.0.25",
-    "@storybook/testing-library": "0.2.0",
-    "@types/jest-axe": "^3.5.5",
-    "@types/node": "^20.3.3",
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
-    "jest": "^29.5.0",
-    "jest-axe": "^7.0.1",
-    "jest-environment-jsdom": "^29.5.0",
-    "prop-types": "15.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "rollup": "^3.26.0",
-    "storybook": "7.0.25",
-    "tailwindcss": "^3.3.2",
-    "typescript": "^5.1.6"
-  }
+    "name": "@elucidario/pkg-design-system",
+    "version": "0.2.0",
+    "description": "",
+    "keywords": [],
+    "license": "ISC",
+    "author": "",
+    "type": "module",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "storybook": "storybook dev -p 6006",
+        "build-storybook": "storybook build",
+        "build": "rollup -c",
+        "watch": "rollup -c -w",
+        "start": "pnpm generate-stories && pnpm storybook",
+        "generate-stories": "node bin/generateStories.js",
+        "build:styles": "tailwindcss -i ./src/input.css -o ./dist/output.css",
+        "watch:styles": "pnpm build:styles --watch"
+    },
+    "dependencies": {
+        "@elucidario/pkg-mdorim": "workspace:^",
+        "@radix-ui/react-icons": "^1.3.0",
+        "@radix-ui/react-popover": "^1.0.6",
+        "react-hook-form": "^7.45.1"
+    },
+    "devDependencies": {
+        "@babel/preset-env": "^7.22.7",
+        "@babel/preset-react": "^7.22.5",
+        "@babel/preset-typescript": "^7.22.5",
+        "@elucidario/pkg-rollup": "workspace:^",
+        "@elucidario/pkg-tsconfig": "workspace:^",
+        "@elucidario/pkg-types": "workspace:^",
+        "@rollup/plugin-babel": "^6.0.3",
+        "@rollup/plugin-node-resolve": "^15.1.0",
+        "@rollup/plugin-replace": "^5.0.2",
+        "@storybook/addon-essentials": "7.0.26",
+        "@storybook/addon-interactions": "7.0.26",
+        "@storybook/addon-links": "7.0.26",
+        "@storybook/addon-styling": "^1.3.2",
+        "@storybook/blocks": "7.0.26",
+        "@storybook/react": "7.0.26",
+        "@storybook/react-vite": "7.0.26",
+        "@storybook/testing-library": "0.2.0",
+        "@types/jest-axe": "^3.5.5",
+        "@types/node": "^20.4.1",
+        "@types/react": "^18.2.14",
+        "@types/react-dom": "^18.2.6",
+        "jest": "^29.6.1",
+        "jest-axe": "^8.0.0",
+        "jest-environment-jsdom": "^29.6.1",
+        "prop-types": "15.8.1",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "rollup": "^3.26.2",
+        "storybook": "7.0.26",
+        "tailwindcss": "^3.3.2",
+        "typescript": "^5.1.6"
+    }
 }
