chore(workspace): workspace files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,6 +28,7 @@
         "Bardi",
         "Battista",
         "BELKIN",
+        "bergmann",
         "Bonomi",
         "booleano",
         "BORKO",
@@ -62,6 +63,7 @@
         "documentaion",
         "docusaurus",
         "Dodd",
+        "droettboom",
         "Emmanuelle",
         "epistemologicas",
         "estructurados",
@@ -82,6 +84,7 @@
         "hjorland",
         "Hjorland",
         "HJORLAND",
+        "hykes",
         "icom",
         "ilustracoes",
         "informacao",
@@ -108,6 +111,7 @@
         "Mattos",
         "mofile",
         "museologica",
+        "nakazawa",
         "nivel",
         "ODDY",
         "opis",
@@ -117,6 +121,7 @@
         "pestphp",
         "phpcodesniffer",
         "phpcompatibility",
+        "phpdox",
         "phpunit",
         "principios",
         "profesionales",
@@ -138,8 +143,10 @@
         "tecnica",
         "TECNICA",
         "teorico",
+        "theseer",
         "timespan",
         "titulos",
+        "traducoes",
         "Uncategorized",
         "varchar",
         "vega",
