--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "eslint": "^8.44.0",
         "husky": "^8.0.0",
         "lerna": "^7.1.1",
+        "lint-staged": "^13.2.3",
         "prettier": "^3.0.0",
         "typescript": "^5.1.6"
     },
