--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -11,7 +11,8 @@
         "index": "node ./.bin/create-index.js",
         "make-pot": "node ./.bin/make-pot.js",
         "test": "pnpm .bin/test.sh",
-        "lint": "pnpm .bin/lint.sh"
+        "lint": "pnpm .bin/lint.sh",
+        "db:reset-test": "rm -r ./wp/src/wp-content/database"
     },
     "dependencies": {
         "@elucidario/pkg-mdorim": "workspace:^",
