--- a/publications/dissertacao-mestrado/content/pt-br/metadados-representacao/linked-art/measurement.json
+++ b/publications/dissertacao-mestrado/content/pt-br/metadados-representacao/linked-art/measurement.json
@@ -1,5 +1,5 @@
 {
-    "title": "Quadro X: Propriedades de _Measurements_",
+    "title": "{{count:charts;legend=Propriedades de _Measurements_.}}",
     "fields": [
         {
             "type": "string",
