fix(workspace): workspace files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,6 +48,7 @@
         "colspan",
         "comite",
         "comunicacao",
+        "consideracoes",
         "dashicons",
         "datetime",
         "dealerdirect",
@@ -64,6 +65,7 @@
         "docusaurus",
         "Dodd",
         "droettboom",
+        "embeddable",
         "Emmanuelle",
         "epistemologicas",
         "estructurados",
@@ -74,6 +76,7 @@
         "Ferrez",
         "Frohmann",
         "funcao",
+        "Gantt",
         "Gaulli",
         "gdocid",
         "github",
@@ -111,9 +114,12 @@
         "Mattos",
         "mofile",
         "museologica",
+        "museologist",
         "nakazawa",
         "nivel",
+        "numeracao",
         "ODDY",
+        "opcao",
         "opis",
         "Ottoni",
         "paradigmaticas",
@@ -145,8 +151,11 @@
         "teorico",
         "theseer",
         "timespan",
+        "tinyint",
         "titulos",
+        "torvalds",
         "traducoes",
+        "typicode",
         "Uncategorized",
         "varchar",
         "vega",
