--- a/packages/core/composer.json
+++ b/packages/core/composer.json
@@ -38,7 +38,8 @@
         "squizlabs/php_codesniffer": "^3.7",
         "wp-cli/wp-cli-bundle": "*",
         "wp-coding-standards/wpcs": "2.3.0",
-        "theseer/phpdox": "*"
+        "theseer/phpdox": "*",
+        "saggre/phpdocumentor-markdown": "^0.1.3"
     },
     "scripts": {
         "phpcbf": "phpcbf --standard=phpcs.xml --extensions=php --ignore=vendor/ ./src/php",
