--- a/packages/core/composer.json
+++ b/packages/core/composer.json
@@ -39,12 +39,13 @@
         "wp-cli/wp-cli-bundle": "*",
         "wp-coding-standards/wpcs": "2.3.0",
         "theseer/phpdox": "*",
-        "saggre/phpdocumentor-markdown": "^0.1.3"
+        "saggre/phpdocumentor-markdown": "^0.1.3",
+        "phpunit/php-code-coverage": "^9.2"
     },
     "scripts": {
         "phpcbf": "phpcbf --standard=phpcs.xml --extensions=php --ignore=vendor/ ./src/php",
         "phpcs": "phpcs --standard=phpcs.xml --extensions=php --ignore=vendor/ ./src/php",
-        "test:integration": "vendor/bin/pest --group=integration",
+        "test:integration": "vendor/bin/pest --group=integration --coverage",
         "test:unit": "vendor/bin/pest --group=unit",
         "doc": "vendor/bin/phpdox"
     }
