--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -6,7 +6,6 @@
     "license": "ISC",
     "author": "",
     "type": "module",
-    "main": "index.js",
     "scripts": {
         "storybook": "storybook dev -p 6006",
         "build-storybook": "storybook build",
@@ -21,6 +20,7 @@
         "@elucidario/pkg-mdorim": "workspace:^",
         "@radix-ui/react-icons": "^1.3.0",
         "@radix-ui/react-popover": "^1.0.6",
+        "lodash-es": "^4.17.21",
         "react-hook-form": "^7.45.1"
     },
     "devDependencies": {
@@ -33,15 +33,16 @@
         "@rollup/plugin-babel": "^6.0.3",
         "@rollup/plugin-node-resolve": "^15.1.0",
         "@rollup/plugin-replace": "^5.0.2",
-        "@storybook/addon-essentials": "7.0.26",
-        "@storybook/addon-interactions": "7.0.26",
-        "@storybook/addon-links": "7.0.26",
-        "@storybook/addon-styling": "^1.3.2",
-        "@storybook/blocks": "7.0.26",
-        "@storybook/react": "7.0.26",
-        "@storybook/react-vite": "7.0.26",
+        "@storybook/addon-essentials": "7.2.3",
+        "@storybook/addon-interactions": "7.2.3",
+        "@storybook/addon-links": "7.2.3",
+        "@storybook/addon-styling": "^1.3.6",
+        "@storybook/blocks": "7.2.3",
+        "@storybook/react": "7.2.3",
+        "@storybook/react-vite": "7.2.3",
         "@storybook/testing-library": "0.2.0",
         "@types/jest-axe": "^3.5.5",
+        "@types/lodash-es": "^4.17.7",
         "@types/node": "^20.4.1",
         "@types/react": "^18.2.14",
         "@types/react-dom": "^18.2.6",
@@ -52,7 +53,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "rollup": "^3.26.2",
-        "storybook": "7.0.26",
+        "storybook": "7.2.3",
         "tailwindcss": "^3.3.2",
         "typescript": "^5.1.6"
     }
