--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
         "swizzle": "lerna run swizzle",
         "test": "lerna run test --stream",
         "typecheck": "tsc",
-        "versionUp": "lerna version --no-private --conventional-commits --create-release github"
+        "versionUp": "lerna version --no-private --conventional-commits"
     },
     "husky": {
         "hooks": {
