fix(dissertacao-mestrado): atualizações

--- a/publications/dissertacao-mestrado/content/pt-br/metadados-representacao/linked-art/measurement.json
+++ b/publications/dissertacao-mestrado/content/pt-br/metadados-representacao/linked-art/measurement.json
@@ -26,6 +26,6 @@
     ],
     "note": {
         "label": "Fonte",
-        "content": "Elaborado pelo autor. Metadados utilizados no objeto _Measurements_ do Linked Art [@linked-art2021.8]"
+        "content": "Elaborado pelo autor. Metadados utilizados no objeto _Measurements_ do Linked Art (2021)."
     }
 }
