fix(workspace): workspace files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -127,11 +127,13 @@
         "pestphp",
         "phpcodesniffer",
         "phpcompatibility",
+        "phpdocumentor",
         "phpdox",
         "phpunit",
         "principios",
         "profesionales",
         "retrocycle",
+        "saggre",
         "sanderson",
         "Sanderson",
         "saracevic",
@@ -149,6 +151,7 @@
         "tecnica",
         "TECNICA",
         "teorico",
+        "Testcase",
         "theseer",
         "timespan",
         "tinyint",
