--- a/packages/core/composer.json
+++ b/packages/core/composer.json
@@ -50,7 +50,7 @@
     "scripts": {
         "phpcbf": "phpcbf --standard=phpcs.xml --extensions=php --ignore=vendor/ ./src/php",
         "phpcs": "phpcs --standard=phpcs.xml --extensions=php --ignore=vendor/ ./src/php",
-        "test": "vendor/bin/pest",
+        "test": "vendor/bin/pest --coverage",
         "test:integration": "vendor/bin/pest --group=integration",
         "test:unit": "vendor/bin/pest --group=unit",
         "doc": "vendor/bin/phpdox"
