fix(dissertacao-mestrado): atualizações

--- a/publications/dissertacao-mestrado/content/pt-br/elucidario/mdorim/modelo/model-mapping.json
+++ b/publications/dissertacao-mestrado/content/pt-br/elucidario/mdorim/modelo/model-mapping.json
@@ -27,6 +27,7 @@
         ["author", "int", "sim", "ID do autor do mapeamento"],
         ["standard", "string", "sim", "Nome do modelo que será mapeado"],
         ["standard_uri", "string", "sim", "URI do modelo que será mapeado"],
+        ["version", "string", "sim", "Versão do mapeamento"],
         ["created", "datetime", "sim", "Data de criação do mapeamento"],
         ["modified", "datetime", "sim", "Data de atualização do mapeamento"],
         ["mapping", "`PropMap[]`", "sim", "Propriedades mapeadas"]
