fix(dissertacao-mestrado): mdorim

--- a/publications/dissertacao-mestrado/content/pt-br/elucidario/mdorim/modelo/model-mapping.json
+++ b/publications/dissertacao-mestrado/content/pt-br/elucidario/mdorim/modelo/model-mapping.json
@@ -26,7 +26,7 @@
         ["description", "string", "", "Descrição do mapeamento"],
         ["author", "int", "sim", "ID do autor do mapeamento"],
         ["standard", "string", "sim", "Nome do modelo que será mapeado"],
-        ["standard_uri", "string", "sim", "URI do modelo que será mapeado"],
+        ["standard_uri", "string", "", "URI do modelo que será mapeado"],
         ["version", "string", "sim", "Versão do mapeamento"],
         ["created", "datetime", "sim", "Data de criação do mapeamento"],
         ["modified", "datetime", "sim", "Data de atualização do mapeamento"],
