--- a/publications/dissertacao-mestrado/package.json
+++ b/publications/dissertacao-mestrado/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@elucidario/pub-dissertacao-mestrado",
-    "version": "0.7.1",
+    "version": "0.7.1-alpha.0",
     "main": "README.md",
     "private": true,
     "scripts": {
