--- a/packages/mdorim/package.json
+++ b/packages/mdorim/package.json
@@ -49,8 +49,8 @@
         "@elucidario/pkg-pub-gen": "workspace:^",
         "@elucidario/pkg-rollup": "workspace:^",
         "@elucidario/pkg-schema-doc": "workspace:^",
-        "@elucidario/pkg-types": "workspace:^",
         "@elucidario/pkg-tsconfig": "workspace:^",
+        "@elucidario/pkg-types": "workspace:^",
         "child_process": "^1.0.2",
         "commander": "^10.0.1",
         "jest": "^29.5.0",
@@ -58,6 +58,7 @@
         "json-schema-to-typescript": "^13.0.1",
         "lodash-es": "^4.17.21",
         "rollup": "^4.2.0",
+        "tslib": "^2.5.0",
         "typescript": "^5.2.2"
     }
 }
