--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -1,60 +1,61 @@
 {
     "name": "@elucidario/pkg-design-system",
     "version": "0.3.0",
-    "description": "",
-    "keywords": [],
-    "license": "ISC",
-    "author": "",
     "type": "module",
+    "files": [
+        "dist"
+    ],
+    "main": "./dist/es/design-system.js",
+    "module": "./dist/es/design-system.js",
+    "exports": {
+        ".": {
+            "import": "./dist/es/design-system.js"
+        }
+    },
+    "types": "./dist/types/lib/index.d.ts",
     "scripts": {
-        "storybook": "storybook dev -p 6006",
-        "build-storybook": "storybook build",
-        "build": "rollup -c",
-        "watch": "rollup -c -w",
-        "start": "pnpm generate-stories && pnpm storybook",
-        "generate-stories": "node bin/generateStories.js",
-        "build:styles": "tailwindcss -i ./src/input.css -o ./dist/output.css",
+        "build": "tsc && vite build --watch",
+        "build:styles": "tailwindcss -i ./lib/input.css -o ./dist/output.css",
+        "dev": "vite",
+        "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+        "preview": "vite preview",
         "watch:styles": "pnpm build:styles --watch"
     },
     "dependencies": {
-        "@elucidario/pkg-mdorim": "workspace:^",
         "@radix-ui/react-icons": "^1.3.0",
-        "@radix-ui/react-popover": "^1.0.6",
-        "lodash-es": "^4.17.21",
-        "react-hook-form": "^7.45.1"
+        "@radix-ui/react-popover": "^1.0.7",
+        "lodash-es": "^4.17.21"
     },
     "devDependencies": {
-        "@babel/preset-env": "^7.22.7",
-        "@babel/preset-react": "^7.22.5",
-        "@babel/preset-typescript": "^7.22.5",
-        "@elucidario/pkg-rollup": "workspace:^",
-        "@elucidario/pkg-tsconfig": "workspace:^",
         "@elucidario/pkg-types": "workspace:^",
-        "@rollup/plugin-babel": "^6.0.3",
-        "@rollup/plugin-node-resolve": "^15.1.0",
-        "@rollup/plugin-replace": "^5.0.2",
-        "@storybook/addon-essentials": "7.2.3",
-        "@storybook/addon-interactions": "7.2.3",
-        "@storybook/addon-links": "7.2.3",
-        "@storybook/addon-styling": "^1.3.6",
-        "@storybook/blocks": "7.2.3",
-        "@storybook/react": "7.2.3",
-        "@storybook/react-vite": "7.2.3",
-        "@storybook/testing-library": "0.2.0",
-        "@types/jest-axe": "^3.5.5",
-        "@types/lodash-es": "^4.17.7",
-        "@types/node": "^20.4.1",
-        "@types/react": "^18.2.14",
-        "@types/react-dom": "^18.2.6",
-        "jest": "^29.6.1",
-        "jest-axe": "^8.0.0",
-        "jest-environment-jsdom": "^29.6.1",
-        "prop-types": "15.8.1",
+        "@storybook/react": "7.5.3",
+        "@types/lodash-es": "^4.17.11",
+        "@types/react": "^18.2.37",
+        "@types/react-dom": "^18.2.15",
+        "@typescript-eslint/eslint-plugin": "^6.10.0",
+        "@typescript-eslint/parser": "^6.10.0",
+        "@vitejs/plugin-react": "^4.1.1",
+        "autoprefixer": "^10.4.16",
+        "eslint": "^8.53.0",
+        "eslint-plugin-react": "^7.33.2",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-react-refresh": "^0.4.4",
+        "eslint-plugin-simple-import-sort": "^10.0.0",
+        "postcss": "^8.4.31",
+        "prettier": "^3.0.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "rollup": "^3.26.2",
-        "storybook": "7.2.3",
-        "tailwindcss": "^3.3.2",
-        "typescript": "^5.1.6"
+        "react-hooks": "^1.0.1",
+        "storybook": "7.5.3",
+        "tailwind": "^4.0.0",
+        "tailwindcss": "^3.3.5",
+        "typescript": "^5.2.2",
+        "vite": "^4.5.0",
+        "vite-plugin-dts": "^3.6.3",
+        "vite-tsconfig-paths": "^4.2.1"
+    },
+    "peerDependencies": {
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
     }
 }
