feat(mdorim integration): mdorim & design-system integration + stories

--- a/packages/design-system/tsconfig.json
+++ b/packages/design-system/tsconfig.json
@@ -23,11 +23,11 @@
         "noFallthroughCasesInSwitch": true,
 
         /* Design system */
-        "types": ["./node_modules/@elucidario/pkg-types/dist/index.d.ts"],
+        "types": ["@elucidario/pkg-types"],
         "paths": {
             "@/*": ["./lib/*"],
             "@elucidario/pkg-types": [
-                "./node_modules/@elucidario/pkg-types/dist/index.d.ts"
+                "./node_modules/@elucidario/pkg-types/dist"
             ]
         }
     },
