--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -2,24 +2,24 @@
     "name": "@elucidario/pkg-design-system",
     "version": "0.3.0",
     "type": "module",
-    "files": [
-        "dist"
-    ],
-    "main": "./dist/es/design-system.js",
-    "module": "./dist/es/design-system.js",
     "exports": {
         ".": {
+            "types": "./dist/types/lib/index.d.ts",
             "import": "./dist/es/design-system.js"
         }
     },
-    "types": "./dist/types/lib/index.d.ts",
+    "main": "./dist/es/design-system.js",
+    "module": "./dist/es/design-system.js",
+    "files": [
+        "dist"
+    ],
     "scripts": {
         "build": "tsc && vite build",
-        "watch": "pnpm build --watch",
         "build:styles": "tailwindcss -i ./lib/input.css -o ./dist/output.css",
         "dev": "vite",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview",
+        "watch": "pnpm build --watch",
         "watch:styles": "pnpm build:styles --watch"
     },
     "dependencies": {
@@ -56,6 +56,7 @@
         "vite-tsconfig-paths": "^4.2.1"
     },
     "peerDependencies": {
+        "@elucidario/pkg-mdorim-react": "workspace:^",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     }
