--- a/packages/mdorim/package.json
+++ b/packages/mdorim/package.json
@@ -11,11 +11,12 @@
     "type": "module",
     "exports": {
         ".": {
+            "types": "./lib/types/src/lib/index.d.ts",
             "import": "./lib/mjs/index.min.mjs",
             "require": "./lib/cjs/index.min.cjs"
         }
     },
-    "main": "lib/mjs/index.mjs",
+    "main": "./lib/mjs/index.min.mjs",
     "files": [
         "dist",
         "mapping",
@@ -24,33 +25,34 @@
         "translations"
     ],
     "scripts": {
-        "build": "pnpm build:script -c -s -e -t -d -l && pnpm test",
+        "build": "pnpm clean:lib && pnpm build:types && pnpm build:script -c -s -e -t -d -l && pnpm test",
         "build:rollup": "rollup -c",
-        "watch:rollup": "rollup -c -w",
         "build:script": "node src/build/build.js",
+        "build:types": "tsc --emitDeclarationOnly --declarationDir \"lib/types\"",
         "clean:docs": "rm -rf docs/*",
-        "clean:static": "rm -rf static/*",
         "clean:lib": "rm -rf lib/*",
+        "clean:static": "rm -rf static/*",
         "dev": "pnpm build:script -c -s -e -t -l -w --test",
         "jest": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose",
-        "test": "pnpm .bin/test.sh"
+        "test": "pnpm .bin/test.sh",
+        "watch:rollup": "rollup -c -w"
     },
     "dependencies": {
         "@babel/plugin-syntax-import-attributes": "^7.22.5",
-        "ajv": "6",
-        "json-cycle": "^1.5.0"
+        "@elucidario/pkg-paths": "workspace:^",
+        "ajv": "6"
     },
     "devDependencies": {
         "@babel/plugin-transform-json-strings": "^7.22.5",
         "@babel/preset-env": "^7.22.7",
         "@elucidario/pkg-console": "workspace:^",
         "@elucidario/pkg-docusaurus-md": "workspace:^",
-        "@elucidario/pkg-paths": "workspace:^",
         "@elucidario/pkg-pub-gen": "workspace:^",
         "@elucidario/pkg-rollup": "workspace:^",
         "@elucidario/pkg-schema-doc": "workspace:^",
         "@elucidario/pkg-tsconfig": "workspace:^",
         "@elucidario/pkg-types": "workspace:^",
+        "@types/node": "^20.9.0",
         "child_process": "^1.0.2",
         "commander": "^10.0.1",
         "jest": "^29.5.0",
