--- a/packages/mdorim/tsconfig.json
+++ b/packages/mdorim/tsconfig.json
@@ -1,12 +1,23 @@
 {
     "extends": "@elucidario/pkg-tsconfig",
     "compilerOptions": {
+        "rootDir": ".",
         "baseUrl": ".",
+        "target": "ES2020",
         "outDir": "lib",
         "resolveJsonModule": true,
-        "moduleResolution": "node",
-        "declaration": true,
-        "types": ["@elucidario/pkg-types"]
+        "moduleResolution": "bundler",
+
+        "types": ["@elucidario/pkg-types", "@elucidario/pkg-paths"],
+
+        "paths": {
+            "@elucidario/pkg-types": [
+                "./node_modules/@elucidario/pkg-types/dist/index.d.ts"
+            ],
+            "@elucidario/pkg-paths": [
+                "./node_modules/@elucidario/pkg-paths/dist/index.d.ts"
+            ]
+        }
     },
     "include": ["src/lib/**/*.ts"]
 }
