--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,7 @@
     },
     "markdownlint.run": "onSave",
     "markdown.occurrencesHighlight.enabled": true,
-    "markdownlint.ignore": ["./publications/**/content/**/*"],
+    "markdownlint.ignore": ["./publications/**/dist/**/*"],
     "[json]": {
         "editor.quickSuggestions": {
             "strings": true
@@ -18,6 +18,7 @@
     "cSpell.words": [
         "ABSPATH",
         "Albrechtsen",
+        "apresentacao",
         "Athanasios",
         "Auguste",
         "autodocs",
@@ -81,6 +82,7 @@
         "gdocid",
         "github",
         "Guanyin",
+        "henrique",
         "Hessel",
         "Hillhouse",
         "historicas",
@@ -158,6 +160,7 @@
         "titulos",
         "torvalds",
         "traducoes",
+        "trashable",
         "typicode",
         "Uncategorized",
         "varchar",
@@ -174,5 +177,14 @@
     ],
     "npm.packageManager": "pnpm",
     "prettier.tabWidth": 4,
-    "eslint.format.enable": true
+    "eslint.format.enable": true,
+    "rest-client.environmentVariables": {
+        "$shared": {
+            "namespace": "lcdr",
+            "version": "v1"
+        },
+        "local": {
+            "base": "http://localhost:8080"
+        }
+    }
 }
