--- a/apps/lcdr-docs/package.json
+++ b/apps/lcdr-docs/package.json
@@ -1,19 +1,17 @@
 {
     "name": "@elucidario/app-lcdr-docs",
     "version": "0.1.0",
-    "private": true,
     "scripts": {
         "build": "docusaurus build",
         "build:codespace": "export ENV=codespace && docusaurus build",
         "clear": "docusaurus clear",
         "deploy": "docusaurus deploy",
-        "docusaurus": "docusaurus",
         "serve": "docusaurus serve",
         "start": "docusaurus start",
-        "swizzle": "docusaurus swizzle",
         "typecheck": "tsc",
         "write-heading-ids": "docusaurus write-heading-ids",
-        "write-translations": "docusaurus write-translations"
+        "write-translations": "docusaurus write-translations",
+        "check:mdx": "pnpm dlx docusaurus-mdx-checker"
     },
     "browserslist": {
         "production": [
@@ -28,24 +26,25 @@
         ]
     },
     "dependencies": {
-        "@docusaurus/core": "^2.4.0",
-        "@docusaurus/module-type-aliases": "^2.4.0",
-        "@docusaurus/plugin-content-docs": "^2.4.0",
-        "@docusaurus/preset-classic": "^2.4.0",
+        "@docusaurus/core": "^3.0.0",
+        "@docusaurus/module-type-aliases": "^3.0.0",
+        "@docusaurus/plugin-content-docs": "^3.0.0",
+        "@docusaurus/preset-classic": "^3.0.0",
         "@docusaurus/theme-classic": "^2.4.0",
-        "@mdx-js/react": "^1.6.22",
+        "@mdx-js/react": "^3.0.0",
         "clsx": "^1.2.1",
-        "prism-react-renderer": "^1.3.5",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2"
+        "prism-react-renderer": "^2.1.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
     },
     "devDependencies": {
-        "@tsconfig/docusaurus": "^1.0.7",
+        "@docusaurus/tsconfig": "3.0.0",
         "@types/node": "^18.15.11",
-        "typescript": "^5.0.4"
+        "@types/react": "^18.2.29",
+        "typescript": "^5.2.2"
     },
     "engines": {
-        "node": ">=16.14"
+        "node": ">=18.0"
     },
     "nx": {
         "targets": {
