--- a/packages/paths/package.json
+++ b/packages/paths/package.json
@@ -12,22 +12,30 @@
     ],
     "exports": {
         ".": {
-            "types": "./dist/index.d.ts",
-            "import": "./dist/index.esm.js",
-            "require": "./dist/index.js"
+            "types": "./dist/types/index.d.ts",
+            "import": "./dist/mjs/index.min.mjs",
+            "require": "./dist/cjs/index.min.cjs"
         }
     },
     "scripts": {
-        "build": "pnpm clean && rollup -c",
+        "build": "pnpm clean && tsc && rollup -c",
         "dev": "rollup -c -w",
-        "clean": "rm -rf dist"
+        "clean": "rm -rf dist/*",
+        "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose",
+        "test:cov": "pnpm test -- --coverage --coverageDirectory=\"tests/coverage\""
     },
     "dependencies": {
+        "@elucidario/pkg-console": "workspace:^",
         "commander": "^11.0.0",
         "lodash-es": "^4.17.21"
     },
+    "peerDependencies": {
+        "@elucidario/pkg-console": "workspace:^"
+    },
     "devDependencies": {
-        "@elucidario/pkg-console": "workspace:^",
+        "@babel/plugin-syntax-import-attributes": "^7.22.5",
+        "@babel/plugin-transform-json-strings": "^7.22.5",
+        "@babel/preset-env": "^7.23.3",
         "@elucidario/pkg-rollup": "workspace:^",
         "@elucidario/pkg-tsconfig": "workspace:^",
         "@elucidario/pkg-types": "workspace:^",
