--- a/packages/console/package.json
+++ b/packages/console/package.json
@@ -3,49 +3,32 @@
 	"version": "0.2.1",
 	"license": "MIT",
 	"type": "module",
-	"main": "dist/index.js",
-	"types": "dist/index.d.ts",
+	"main": "dist/mjs/index.min.mjs",
+	"exports": {
+		".": {
+			"types": "./dist/types/index.d.ts",
+			"import": "./dist/mjs/index.min.mjs",
+			"require": "./dist/cjs/index.min.cjs"
+		}
+	},
 	"scripts": {
-		"build": "pnpm clean && tsc",
+		"build": "pnpm clean && tsc && rollup -c",
 		"clean": "rm -rf dist/*",
 		"dev": "pnpm build -w"
 	},
-	"xo": {
-		"extends": "xo-react",
-		"rules": {
-			"react/prop-types": "off"
-		}
-	},
 	"prettier": "@vdemedes/prettier-config",
-	"ava": {
-		"extensions": {
-			"ts": "module",
-			"tsx": "module"
-		},
-		"nodeArguments": [
-			"--loader=ts-node/esm"
-		]
-	},
 	"dependencies": {
-		"ink": "^4.1.0",
-		"react": "^18.2.0"
+		"chalk": "^5.2.0"
 	},
 	"devDependencies": {
+		"@elucidario/pkg-rollup": "workspace:^",
 		"@elucidario/pkg-tsconfig": "workspace:^",
 		"@elucidario/pkg-types": "workspace:^",
-		"@types/react": "^18.0.32",
 		"@vdemedes/prettier-config": "^2.0.1",
-		"ava": "^5.2.0",
-		"chalk": "^5.2.0",
-		"eslint-config-xo-react": "^0.27.0",
 		"eslint-plugin-react": "^7.32.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
-		"ink-testing-library": "^3.0.0",
+		"rollup": "^4.6.0",
 		"ts-node": "^10.9.1",
-		"typescript": "^5.0.3",
-		"xo": "^0.53.1"
-	},
-	"engines": {
-		"node": ">=16"
+		"typescript": "^5.0.3"
 	}
 }
